--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,6 +8,5 @@
     gap: 51px;
     padding-top: 3vh;
     padding-bottom: 13vh;
-    width: 1104px;
     margin: 0 auto;
 }
